--- a/iOS-Calculator/Info.plist
+++ b/iOS-Calculator/Info.plist
@@ -34,5 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>WorkSans-ExtraLight.ttf</string>
+	</array>
 </dict>
 </plist>
